feat: documentstructure fill post.
